Fix/ldoc 2484 adaptive layout on mobile

--- a/packages/adminui-vue/theme/ub-body.css
+++ b/packages/adminui-vue/theme/ub-body.css
@@ -179,12 +179,16 @@ html, body {
     padding: 0;
 }
 
+.el-dialog {
+    max-width: 100vw;
+}
+
 .ub-dialog__max-width .el-dialog {
-    max-width: 800px;
+    max-width: min(100%, 800px);
 }
 
 .ub-dialog__min-width .el-dialog {
-    min-width: 480px;
+    min-width: min(100%, 480px);
 }
 
 .ub-dialog__table-entity .el-dialog {
@@ -242,4 +246,52 @@ html, body {
     width: 1px;
     background: hsl(var(--hs-border), var(--l-layout-border-default));
     margin: 0 8px;
+}
+
+@media (max-width: 480px) {
+    /* date-picker with sidebar */
+    .el-date-picker.has-sidebar {
+        width: 320px;
+    }
+
+    .el-date-picker.has-sidebar .el-date-picker__header {
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+    }
+
+    .el-date-picker.has-sidebar .el-date-picker__header-label {
+        font-size: 12px;
+        margin-top: 8px;
+    }
+
+    .el-date-picker.has-sidebar .el-picker-panel__content {
+        width: 174px;
+ 
+    }
+
+    /* date-picker range */
+    .el-picker-panel.el-date-range-picker, .el-picker-panel.el-date-range-picker .el-picker-panel__body {
+        width: 95vw;
+        min-width: unset;
+    }
+    .el-picker-panel.el-date-range-picker .el-date-range-picker__content .el-date-range-picker__header div {
+        margin: unset;
+    }
+    .el-picker-panel.el-date-range-picker .el-date-range-picker__header div {
+        font-size: 12px;
+        margin: unset;
+    }
+    .el-picker-panel.el-date-range-picker .el-date-table {
+        font-size: 10px;
+    }
+    .el-picker-panel.el-date-range-picker .el-date-table td div {
+        height: 20px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+    .el-picker-panel.el-date-range-picker .el-date-table td.start-date span {
+        z-index: 1;
+    }
 }
